style: 🎨 fixed footer item alignments

--- a/scss.scss
+++ b/scss.scss
@@ -953,6 +953,7 @@ html, body{
         font-size: 2.5vh;
 
         *{
+          display: inline-block;
           line-height: 1em;
         }
       }
